fix https://github.com/mvel/mvel/issues/355